--- a/portfolio.css
+++ b/portfolio.css
@@ -38,7 +38,7 @@ body {
    }
    #Top img{
      z-index: 1000;
-     position: absolute;
+     position: relative;
      display: block;
      margin: auto;
      padding: 20%;
@@ -62,7 +62,7 @@ body {
     margin:10px;
 }
 #menulist li a{
-    color: blanchedalmond;
+    color: black;
     text-decoration: none;
 }
 #menulist li a:hover{
@@ -174,8 +174,3 @@ h1{
     height: 230px;
     background-color: white;
 }
-
-#particle-canvas {
-    width: 100%;
-    height: 100%;
-  }
